Alteração do projeto

--- a/index.html
+++ b/index.html
@@ -76,10 +76,42 @@
             </div>
           </div>
         </section>
+        <div class="row inovacao">
+          <div class="col inovar">
+            <p>23% são Inovadores</p>
+            <p>Qual é o seu perfil?</p>
 
-        
-  
-      </div>
+          </div>
+        </div>
+        <div class="caixa">
+          <div class="row">
+            <div class="col-sm-4 texto-direita">
+                <p>Busca</p>
+                <p>capacitação</p>
+                <p>constante</p>
+            </div>
+            <div class="vertical-line"></div>
+            <div class="col-sm-7 texto">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                voluptate velit esse cillum dolor.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 texto-direita">
+              <p>Gosta de</p>
+              <p>aprender</p>
+            </div>
+            <div class="vertical-line"></div>  
+            <div class="col-sm-7 texto">
+              <p>eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div> <!-- ./ caixa-->
+
+      </div> <!-- ./ gradiente-->
 
       <!-- Footer -->
       <div class="footer">
