Alteração do projeto

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Teste Cinetica para vaga Developer FrontEnd">
     <meta name="title" content="Developer">
     <title>Developer</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
     <!--Incorporando arquivo css-->
     <link rel="stylesheet" href="css/style.css">
     <!--CDN BootStrap-->
@@ -44,7 +45,7 @@
               <!-- Antonio -->
               <div class="col-lg-4 mb5 mb-lg-0">
                 <div class=" bg-gradiente-primary-to-secondary mb-4">
-                  <img src="./assets/no-profile-picture 1.png" alt="">
+                  <img src="./assets/no-profile-picture-1.webp" alt="Avatar 1">
                 </div>
                 <h3>Inovador</h3>
                 <h4>Antonio Frontier</h4>
@@ -55,7 +56,7 @@
               <!-- Julia -->
               <div class="col-lg-4 mb5 mb-lg-0">
                 <div class="icon-stack icon-stack-xl bg-gradiente-primary-to-secondary mb-4">
-                  <img src="./assets/no-profile-picture 2.png" alt="">
+                  <img src="./assets/no-profile-picture-2.webp" alt="Avatar 2">
                 </div>
                 <h3>Pensador</h3>
                 <h4>Julia</h4>
@@ -66,7 +67,7 @@
               <!-- Ceise -->
               <div class="col-lg-4">
                 <div class="icon-stack icon-stack-xl bg-gradiente-primary-to-secondary mb-4">
-                  <img src="./assets/no-profile-picture 3.png" alt="">
+                  <img src="./assets/no-profile-picture-3.webp" alt="Avatar 3">
                 </div>
                 <h3>Sentimental</h3>
                 <h4>Ceise</h4>
